--- a/src/app/app.json
+++ b/src/app/app.json
@@ -2,7 +2,7 @@
   "name": "FBC Custom Appointments",
   "description": "This is an example private app that shows a custom card on the Contact record tab built with React-based frontend. This card demonstrates a simple handshake with HubSpot's serverless backend.",
   "uid": "FBC-Appointment",
-  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write","crm.objects.custom.read", "crm.objects.custom.write","collector.graphql_schema.read","collector.graphql_query.execute","crm.objects.users.read","crm.objects.owners.read","scheduler.meetings.meeting-link.read"],
+  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write","crm.objects.custom.read", "crm.objects.custom.write","collector.graphql_schema.read","collector.graphql_query.execute","crm.objects.users.read","crm.objects.owners.read","scheduler.meetings.meeting-link.read","hubdb"],
   "public": false,
   "extensions": {
     "crm": {
