--- a/src/app/app.functions/package.json
+++ b/src/app/app.functions/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@hubspot/api-client": "^7.0.1",
+    "@hubspot/ui-extensions": "^0.8.53",
     "axios": "^1.7.9"
   }
 }
